Add hibernate logging

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,8 @@
 spring.datasource.url=jdbc:tc:postgresql:11.5-alpine:///
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.format_sql=true
